kubernetes/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 67
      targetPort: 67
